force-app/src/objects/ffr__ReportingPageTableRow__c.object
<CustomObject>
    <customHelpPage>ffr__helpreportingpagetablerow</customHelpPage>
    <fields>
        <fullName>ffr__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__ReportingPageTable__c</fullName>
        <label>Reporting Page Table</label>
        <referenceTo>ffr__ReportingPageTable__c</referenceTo>
        <relationshipLabel>Reporting Page Table Rows</relationshipLabel>
        <relationshipName>ReportingPageTableRows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__RowTitle__c</fullName>
        <label>Row Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__TemplateKey__c</fullName>
        <label>Template Key</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reporting Page Table Row</label>
    <nameField>
        <label>Reporting Page Table Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Page Table Rows</pluralLabel>
    <recordTypes>
        <fullName>ffr__DataRangeTotal</fullName>
        <active>true</active>
        <description>Use this record type to add a data range total to your reporting table.</description>
        <label>Data Range Total</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__RowCalculation</fullName>
        <active>true</active>
        <description>Use this record type to add a row calculation to your reporting table.</description>
        <label>Row Calculation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ffr__RowFilter</fullName>
        <active>true</active>
        <description>Use this record type to add a row filter to your reporting table. The default row filter is NONE.</description>
        <label>Row Filter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>